feat(mobile): wire app bootstrap and platform runtime integrations

--- a/fridge_mobile_app/ios/Runner/Info.plist
+++ b/fridge_mobile_app/ios/Runner/Info.plist
@@ -49,6 +49,12 @@
 	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>더 정확한 알림과 추천 품질 개선을 위해 사용됩니다.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
