--- a/fridge_mobile_app/pubspec.yaml
+++ b/fridge_mobile_app/pubspec.yaml
@@ -34,7 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.3.2
   supabase_flutter: ^2.10.1
+  url_launcher: ^6.3.1
   firebase_core: ^4.1.1
   firebase_analytics: ^12.0.2
   firebase_crashlytics: ^5.0.2
